Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<!doctype html><html><head><meta charset="utf-8"><meta http-equiv="x-ua-compatible" content="ie=edge"><title>gpresland</title><meta name="description" content=""><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><link rel="stylesheet" href="dist/style.css"><link href="dist/styles.css" rel="stylesheet"></head><body><div id="particles"></div><div id="content"><h1>Greg Presland</h1><div class="photo"><img src="dist/img/photo.jpg" alt=""></div><div id="links"><ol><li><a class="icon icon-linkedin" href="https://www.linkedin.com/in/gpresland/" target="_blank"><span>LinkedIn</span></a></li><li><a class="icon icon-github" href="https://github.com/gpresland" target="_blank"><span>GitHub</span></a></li><li><a class="icon icon-email" href="mailto:gpresland@gmail.com"><span>gpresland<br>gmail.com</span></a></li></ol></div></div><script type="text/javascript" src="dist/js.bundle.js"></script></body></html>
+<!doctype html>
+<html>
+
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142404861-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-142404861-1');
+    </script>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>gpresland</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <link rel="stylesheet" href="dist/style.css">
+    <link href="dist/styles.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="particles"></div>
+    <div id="content">
+        <h1>Greg Presland</h1>
+        <div class="photo"><img src="dist/img/photo.jpg" alt=""></div>
+        <div id="links">
+            <ol>
+                <li><a class="icon icon-linkedin" href="https://www.linkedin.com/in/gpresland/"
+                        target="_blank"><span>LinkedIn</span></a></li>
+                <li><a class="icon icon-github" href="https://github.com/gpresland"
+                        target="_blank"><span>GitHub</span></a></li>
+                <li><a class="icon icon-email" href="mailto:gpresland@gmail.com"><span>gpresland<br>gmail.com</span></a>
+                </li>
+            </ol>
+        </div>
+    </div>
+    <script type="text/javascript" src="dist/js.bundle.js"></script>
+</body>
+
+</html>
